# fuzzy-logic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  lint.sh  vcpkg.json
src/: CMakeLists.txt  main.cc
src/fuzzy-complements/: CMakeLists.txt  main.cc
src/gauss2mf/: CMakeLists.txt  main.cc
src/gaussmf/: CMakeLists.txt  main.cc
src/gbellmf/: CMakeLists.txt  main.cc
src/minmax/: CMakeLists.txt  main.cc
src/polinom/: CMakeLists.txt  main.cc
src/probabilistic-interpretation/: CMakeLists.txt  main.cc
src/sigmf/: CMakeLists.txt  main.cc
src/trapmf/: CMakeLists.txt  main.cc
src/trimf/: CMakeLists.txt  main.cc
